Fix invisible Nextjs icon

--- a/styles/_components/_icons.scss
+++ b/styles/_components/_icons.scss
@@ -15,6 +15,14 @@
     width: 60px;
     height: 60px;
     line-height: 1;
+  }
+}
+
+.icon--typescript,
+.icon--gatsbyjs {
+  line-height: 1;
+
+  img {
     filter: grayscale(100%) invert(100) brightness(1000%);
   }
 }
